--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,24 @@
 apply plugin: 'java-library'
 apply plugin: 'war'
 
+webAppDirName = 'WebContent'
+
 repositories {
     mavenCentral()
+}
+
+sourceSets {
+    main {
+        // where does the Java source code live?
+        java {
+            srcDir 'src/main/java'
+        }
+
+        // where do classpath resources like *.properties files live?
+        resources {
+            srcDir 'src/main/java'
+        }
+    }
 }
 
 dependencies {
@@ -10,5 +26,6 @@ dependencies {
     implementation 'com.google.guava:guava:21.0'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.1'
     compile group: 'com.github.noraui', name: 'ojdbc7', version: '12.1.0.2'
+    testImplementation 'junit:junit:4.12'
 }
 
