--- a/build.gradle
+++ b/build.gradle
@@ -9,12 +9,9 @@ repositories {
 
 sourceSets {
     main {
-        // where does the Java source code live?
         java {
             srcDir 'src/main/java'
         }
-
-        // where do classpath resources like *.properties files live?
         resources {
             srcDir 'src/main/java'
         }
@@ -27,5 +24,21 @@ dependencies {
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.1'
     compile group: 'com.github.noraui', name: 'ojdbc7', version: '12.1.0.2'
     testImplementation 'junit:junit:4.12'
+    testCompile 'junit:junit:4.12'
 }
 
+test {
+    testLogging {
+        events 'started', 'passed'
+    }
+}
+
+task testWS(type: Test, dependsOn: testClasses) {
+    include '**/*Test*'
+}
+
+tasks.withType(Javadoc) {
+	options.addStringOption('Xdoclint:none', '-quiet')
+	options.addStringOption('encoding', 'UTF-8')
+	options.addStringOption('charSet', 'UTF-8')
+}
