--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,8 @@ dependencies {
     implementation 'com.google.guava:guava:21.0'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.1'
     compile group: 'com.github.noraui', name: 'ojdbc7', version: '12.1.0.2'
+    compile group: 'com.google.maps', name: 'google-maps-services', version: '0.2.0'
+    compile 'org.slf4j:slf4j-nop:1.7.25'
     testImplementation 'junit:junit:4.12'
     testCompile 'junit:junit:4.12'
 }
